--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "axios": "^0.15.2",
+    "lodash": "^4.17.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
+    "redux-form": "^6.2.0",
     "redux-thunk": "^2.1.0"
   },
   "scripts": {
